# SungearEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CodingConvention.md  FindSungearEngine.cmake  LICENSE  README.md  SungearEngineConfig.cmake  SungearEngineConfig.cmake.in  create_sdk.py  create_sdk_vcpkg_port.py  create_vcpkg_port.py  doxyfile-en  portfile.cmake  vcpkg.json
Plugins/SungearEngineEditor/: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
Plugins/SungearEngineEditor/Resources/: editor_ui_config.ini
Plugins/SungearEngineEditor/Sources/: EditorScene.cpp  EditorScene.h  FileOpenMode.h  Globals.h  ImGuiUtils.cpp  ImGuiUtils.h  PluginMain.cpp  PluginMain.h  Resources.cpp  Resources.h  SungearEngineEditor.cpp  SungearEngineEditor.h  Utils.h
Plugins/SungearEngineEditor/cmake/: include_as_plugin.cmake
Resources/: CMakeLists.txt  SungearEngineConfig.json
Resources/lua/: SGCore.Math.lua  SGCore.Transform.lua  SGCore.lua
Resources/materials/: no_material.sgmat  standard_skybox_material0.sgmat
Resources/models/standard/: plane.fbx
Resources/sg_shaders/features/: outline.sgshader  screen.sgshader  terrain.sgshader  volumetric_fog.sgshader
Resources/sg_shaders/glsl4/: disks.glsl  outline.glsl  primitives.glsl  random.glsl  uniform_bufs_decl.glsl
Resources/shaders/glsl4/: defines.glsl  random.glsl  ray_intersections.glsl  structs_decl.glsl
Resources/skyboxes/: standard_skybox0.sgcm
Resources/ui/: test.html
Resources/ui/styles/: default.css
Resources/ui/xml/: templates.xml
Sources/: CMakeLists.txt  sgcore_export.h  sgutils_export.h
Sources/AndroidApp/: .gitignore  settings.gradle.kts
Sources/AndroidApp/app/: build.gradle.kts
Sources/Core/ECS/: Entity.cpp  Entity.h  IComponent.h  ISystem.h
Sources/Core/Exceptions/: SGNotImplementedException.h
Sources/Core/Graphics/: GraphicsManager.h
Sources/Core/Input/: InputListener.cpp  InputListener.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h
Sources/Core/Logging/: Log.cpp  Log.h
Sources/Core/Main/: Callbacks.cpp  Callbacks.h  Core.cpp  Core.h  CoreTest.cpp  CoreTest.h  Window.cpp  Window.h  Windows.cpp  Windows.h
Sources/Core/Memory/: AssetManager.cpp  AssetManager.h  Resource.h  Utils.cpp  Utils.h
Sources/Core/Observer/: IObservable.h  IObserver.h
Sources/Core/Patterns/: Observer.h
Sources/Core/Utils/: FileUtils.cpp  FileUtils.h  Timer.cpp  Timer.h  TimerCallback.cpp  TimerDeltaUpdateObserver.cpp  TimerDeltaUpdateObserver.h  TimerUpdateObservable.cpp  TimerUpdateObservable.h  TimerUpdateObserver.cpp  TimerUpdateObserver.h
Sources/Meta/: Meta.cpp
Sources/SGAnnotations/: Annotations.h  AnnotationsProcessor.h  CMakeLists.txt  CMakePresets.json  Entry.cpp  Utils.h
Sources/SGConsole/: CMakeLists.txt  Console.cpp  Console.h
Sources/SGConsole/API/: CMakeLists.txt  Console.cpp
Sources/SGConsole/App/: CMakeLists.txt  ConsoleEntryPoint.cpp
Sources/SGCore/: CMakeLists.txt  dummy_header.h  pch.h
Sources/SGCore/Actions/: AlwaysFalseAction.h  AlwaysTrueAction.h  IAction.h  KeyboardKeyAction.h  KeyboardKeyDownAction.h  KeyboardKeyPressedAction.h  KeyboardKeyReleasedAction.h  MouseButtonDownAction.h  MouseButtonPressedAction.h  MouseButtonReleasedAction.h
Sources/SGCore/Animation/: AnimationNodeConnection.cpp  AnimationNodeConnection.h  AnimationsTree.cpp  AnimationsTree.h  AnimationsTreesProcessor.cpp  AnimationsTreesProcessor.h  FrameAnimationNode.cpp  FrameAnimationNode.h  FrameAnimationsProcessor.cpp  FrameAnimationsProcessor.h  GotoAnimationNode.cpp  GotoAnimationNode.h  IAnimationNode.cpp  IAnimationNode.h  MotionAnyState.cpp  MotionAnyState.h  MotionPlanner.cpp  MotionPlanner.h  MotionPlannerConnection.cpp  MotionPlannerConnection.h  MotionPlannerNode.cpp  MotionPlannerNode.h  MotionPlannersResolver.cpp  MotionPlannersResolver.h  SkeletalAnimationNode.cpp  SkeletalAnimationNode.h  WhenAnimationEndAction.cpp  WhenAnimationEndAction.h
Sources/SGCore/Animation2D/: FrameAnimation.h  FrameAnimationsProcessor.cpp  FrameAnimationsProcessor.h
Sources/SGCore/Annotations/: Annotations.h  AnnotationsPreprocessor.cpp  AnnotationsPreprocessor.h  AnnotationsProcessor.cpp  AnnotationsProcessor.h
Sources/SGCore/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioDevice.cpp  AudioDevice.h  AudioListener.cpp  AudioListener.h  AudioProcessor.cpp  AudioProcessor.h  AudioSource.cpp  AudioSource.h  AudioTrack.cpp  AudioTrack.h  AudioUtils.h
Sources/SGCore/CodeGeneration/: CodeGeneration.cpp  CodeGenerator.cpp  CodeGenerator.h  Scope.cpp  Scope.h  Score.cpp
Sources/SGCore/Commands/: CreateFileCommand.h  DefaultCommandsInvoker.h  ICommand.h  ICommandsInvoker.h
Sources/SGCore/Coro/: CoroScheduler.cpp  CoroScheduler.h  CoroUtils.cpp  CoroUtils.h  IAwaitable.h  Task.h  TaskAwaitable.cpp  (+3 more)
Sources/SGECS/: CMakeLists.txt  ComponentWrapper.h  Components.h  ComponentsAllocator.h  Registry.h  RegistryView.h  dummy.cpp
Sources/SGEditor/: CMakeLists.txt
Sources/SGEntry/: CMakeLists.txt  Entry.cpp  Entry.h
Sources/SGUtils/: AssimpUtils.h  CMakeLists.txt  Event.h  EventListener.h  EventListenerHolder.h  FileSmartPointer.cpp  FileSmartPointer.h  FileUtils.cpp  FileUtils.h  Marker.h  Math.h  MathUtils.cpp  MathUtils.h  MemoryUtils.h  MultiDimensionalSingleArray.h  SingleArrayMatrix.h  SingleArrayMultiArray.h  Singleton.h  Timer.cpp  Timer.h  TimerCallback.cpp  TimerCallback.h  TypeInfo.h  TypeTraits.h  UUID.h  UniqueName.cpp  UniqueName.h  UniqueNamesManager.h  Utils.cpp  Utils.h  flat_array.h  pch.h  sgutils_export.h
Tests/Coro/: CMakeLists.txt  Main.cpp  Main.h
Tests/ModelDraw/: CMakeLists.txt  Main.cpp  Main.h
Tests/Physics/: CMakeLists.txt  Main.cpp  Main.h
Tests/SGPhysicsTest/: CMakeLists.txt  main.cpp
Tests/Terrain/: CMakeLists.txt  Main.cpp  Main.h
Tests/UI/: CMakeLists.txt  Main.cpp  Main.h
ThreadingAPI/: CMakeLists.txt
ThreadingAPI/Sources/: Event.h  EventListener.cpp  EventListener.h  EventListenerImpl.h  IWorker.cpp  IWorker.h  Thread.cpp  Thread.h  ThreadsManager.cpp  ThreadsManager.h  TypeTraits.h  Utils.h  main.cpp
(+4181 files in other folders)
